<resources>
    <string name="app_name">Pop Movies</string>
    <string name="movie_thumb">Movie thumb</string>

    <string name="no_API_key">This app needs API-key.\nPlease paste it to Constants.API_KEY_VALUE</string>
    <string name="API_key_length_is_bad">API-key found, but it seems to be too short or too long.\nValid API-key should be 32 chars long.</string>
    <string name="also">\n\nalso\n\n</string>
    <string name="no_internet">Check internet connection.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="pref_sort_order_label">Sort order</string>
    <string name="pref_sort_order_key" translatable="false">sortOrderKey</string>
    <string name="pref_sort_order_default" translatable="false">popularity.desc</string>
    <string-array name="pref_sort_order_values">
        <item>popularity.desc</item>
        <item>vote_average.desc</item>
    </string-array>
    <string-array name="pref_sort_order_names">
        <item>Most popular</item>
        <item>Top rated</item>
    </string-array>

    <string name="title_activity_movie_details">Movie details</string>
    <string name="user_rating_formatter" formatted="false">%s/10</string>

    <string name="title_example_text">title</string>
    <string name="release_date_example_text">releaseDate</string>
    <string name="user_rating_example_text">userRating</string>
    <string name="plot_synopsis_example_text">plotSynopsis</string>
</resources>
